# CustomerServiceandConversationalAI-

./: .gitignore  README.md  classified_results_20250917_073600Z.json  csai.agentic_analysis.json  docker-compose.yml
analysis/: twitter_analysis_apple.py  twitter_analysis_delta.py  twitter_analysis_uber.py
api/: Dockerfile  requirements.txt
performance_agent/customerConversationPerformanceAnalysis/: AICORE_RESOLUTION_SUMMARY.md  COMPREHENSIVE_REPORTING_API_EXECUTION_GUIDE.md  ENHANCED_STRUCTURE_IMPLEMENTATION_SUMMARY.md  EVIDENCE_AND_SCORE_PRESERVATION_FINAL_SUMMARY.md  EVIDENCE_ATTRIBUTE_IMPLEMENTATION_SUMMARY.md  FINAL_ENDPOINTS_AND_TRUNCATION_SOLUTION_SUMMARY.md  FINAL_SYSTEM_ENDPOINTS_COMPLETE_SUMMARY.md  LLM_REASONING_EXTRACTION_CONFIRMATION.md  NO_EVIDENCE_BEHAVIOR_REMOVAL_SUMMARY.md  ORCHESTRATOR_AGENT_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_METRICS_FIX_SUMMARY.md  PERFORMANCE_METRICS_PERSISTENCE_SOLUTION.md  PERFORMANCE_METRICS_RESOLUTION_FINAL.md  PERIODIC_JOB_GUIDE.md  PROJECT_OVERVIEW.md  README.md  README_REPORTING_API_TEST.md  REPORTING_API_EXECUTION_SUMMARY_WITH_CLOUD_DATABASE.md  REPORTING_API_TROUBLESHOOTING_GUIDE.md  STEPS_TO_EXECUTE_REPORTING_API_TEST.md  SYSTEM_ENDPOINTS_AND_COUNTER_RESET_SUMMARY.md  SYSTEM_ENDPOINTS_COMPREHENSIVE_SUMMARY.md  analyze_conversations_claude4.py  categories_duplication_fix_verification.json  check_mongodb_collections.py  check_specific_record_truncation.py  claude4_analysis_results.json  claude4_comprehensive_analysis_results.json  complete_fields_persistence_test_results_20251005_164716.json  debug_agent_output.py  debug_categories_simple.py  debug_data_structure.py  debug_empty_categories.py  debug_mongodb_query.py  debug_performance_averages_report.json  debug_performance_calculation.py  dynamic_llm_reasoning_fix_results_20251005_173639.json  enhanced_structure_test_20251005_184238.json  evidence_attribute_test_results.json  evidence_fix_verification_results.json  (+130 more)
performance_agent/customerConversationPerformanceAnalysis/config/: agent_performance_config.yaml  aicore_credentials.yaml  periodic_job_config.yaml
performance_agent/customerConversationPerformanceAnalysis/src/: __init__.py  aicore_langchain.py  aicore_service.py  api.py  config_loader.py  enhanced_api.py  enhanced_service.py  llm_agent_api.py  llm_agent_service.py  models.py  mongodb_integration_service.py  orchestrator_agent_service.py  periodic_job_service.py  reporting_api.py  reporting_service.py  service.py
performance_agent/customerConversationPerformanceAnalysis/tests/: __init__.py  test_aicore_integration.py  test_api.py  test_config_system.py  test_connection.py  test_llm_agent_service.py  test_main.py  test_periodic_job.py
(+73 files in other folders)
