[metadata]
name = customerConversationPerformanceAnalysis
version = 0.1.0
author = Customer Service Team
author_email = team@company.com
description = A tool for analyzing customer service conversation performance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/company/customerConversationPerformanceAnalysis
project_urls =
    Bug Tracker = https://github.com/company/customerConversationPerformanceAnalysis/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    pandas>=1.3.0
    matplotlib>=3.4.0
    seaborn>=0.11.0
    scikit-learn>=1.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=21.0
    flake8>=3.9
    mypy>=0.910
    isort>=5.9

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    venv,
    .pytest_cache
per-file-ignores =
    __init__.py:F401
    tests/*:S101

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    -v
    --tb=short
    --strict-markers
    --disable-warnings
    --color=yes
    --durations=10
    --cov=src
    --cov-report=html
    --cov-report=term-missing
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests

[coverage:run]
source = src
omit = 
    */tests/*
    */test_*
    setup.py
    conftest.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
